--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,31 @@
 spring:
   application:
     name: yi
+  profiles:
+    active: dev
+  datasource: ## 本地docker库
+    url: jdbc:mysql://localhost:3306/yi
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: ***
+    hikari:
+      maxLifetime: 1765000  #一个连接的生命时长（毫秒），超时而且没被使用则被释放（retired），缺省:30分钟，建议设置比数据库超时时长少30秒以上
+      maximumPoolSize: 15   #连接池中允许的最大连接数。缺省值：10；推荐的公式：((core_count * 2) + effective_spindle_count)
+
+logging:
+  config: classpath:logback-${spring.profiles.active}.xml
 
 
-
-
+## https://github.com/huobiapi/API_Docs/wiki/REST_api_reference
 huobi:
-  prefix: https://api.huobi.pro/market/
-  market:
-    trade: trade?symbol=xrpusdt
-    depth: depth?
+  kline: https://api.huobi.pro/market/history/kline   #k线
+  merged: https://api.huobi.pro/market/detail/merged  #获取聚合行情
+  trade: https://api.huobi.pro/market/trade
+  history_trade: https://api.huobi.pro/market/history/trade  #批量获取最近的交易记录
+  depth: https://api.huobi.pro/market/depth  #获取 Market Depth 数据
+  detail: https://api.huobi.pro/market/detail #获取 Market Detail 24小时成交量数据
 
+yi:
+  retry:
+    enable: true
+    max_attempts: 3
