--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,18 +5,21 @@ spring:
   profiles:
     active: dev
   datasource: ## 本地docker库
-    url: jdbc:mysql://localhost:3306/yi
+    url: jdbc:mysql://www.fateking.com:3306/yi
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: zhaopin123
+    password: dingxin123
     hikari:
       maxLifetime: 1765000  #一个连接的生命时长（毫秒），超时而且没被使用则被释放（retired），缺省:30分钟，建议设置比数据库超时时长少30秒以上
       maximumPoolSize: 15   #连接池中允许的最大连接数。缺省值：10；推荐的公式：((core_count * 2) + effective_spindle_count)
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+      dialect: org.hibernate.dialect.MySQL5Dialect
   mvc:
     favicon:
       enabled: true
-
-
 
 logging:
   config: classpath:logback-${spring.profiles.active}.xml
@@ -25,7 +28,8 @@ logging:
 ## https://github.com/huobiapi/API_Docs/wiki/REST_api_reference
 huobi:
   token_key: hb-pro-token
-  fee_percent: 0.002  #.2%
+  buy_commission: 0.002    #买手续费
+  sell_commission: 0.002   #卖手续费
   #行情API GET
   kline: https://api.huobi.pro/market/history/kline   #k线
   merged: https://api.huobi.pro/market/detail/merged  #获取聚合行情
@@ -58,6 +62,21 @@ huobi:
 
 
 yi:
+  account:
+    access_key: edc65547-2806660d-ff9deea5-88acaccc
+    private_key:
   retry:
     enable: true
     max_attempts: 3
+  schedule:
+    pool_size: 8
+    cron:
+      main: 0/1 * * * * ?
+      sync: 0/1 * * * * ?
+      os: 0 0/30 * * * ?
+
+
+
+
+
+
